# kis-trading-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  STATE.md  install.sh
.github/workflows/: prebuilt.yml
data/: kis_api_manifest.json
docs/: CLI_REFERENCE.md  LLM_GUIDE.md
src/: api.rs  cli.rs  config.rs  errors.rs  main.rs  manifest.rs  ws.rs
tools/: generate_manifest.py  render_cli_reference.py
