[package]
name = "kis-trading-cli"
version = "1.0.0"
edition = "2021"
description = "Cross-platform CLI for Korea Investment & Securities Open API"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
