[package]
name = "kis-trading-cli"
version = "1.0.5"
edition = "2021"
description = "Cross-platform CLI for Korea Investment & Securities Open API"
license = "MIT"

[dependencies]
aes-gcm-siv = "0.11"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.26"
toml = "0.8"
